# goldilocks-core

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  review-2026-06-09-staged-core-pipeline.md
.agents/skills/catchup/: SKILL.md
.agents/skills/code-review/: SKILL.md
.agents/skills/dft-basics/: SKILL.md
.agents/skills/dft-basics/references/: k-points.md  pseudopotentials.md  smearing-soc-convergence.md
.agents/skills/github-cli/: SKILL.md
.agents/skills/make-a-pr/: SKILL.md
.agents/skills/plan/: SKILL.md
.agents/skills/report/: SKILL.md
.agents/skills/review/: SKILL.md
.agents/skills/skill-creator/: SKILL.md
.agents/skills/use-goldilocks/: SKILL.md
.agents/skills/use-goldilocks/references/: qe-scf-template.md  workflows.md
.agents/skills/use-goldilocks/skill-workspace/: evals.md
.agents/skills/use-goldilocks/skill-workspace/iteration-1/: notes.md
.agents/skills/use-uv/: SKILL.md
.agents/skills/write-a-test/: SKILL.md
.agents/skills/write-docs/: SKILL.md
.agents/skills/write-docs/skill-workspace/: evals.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: architecture.md  backends.md  changelog.md  cli.md  contracts.md  conventions.md  decisions.md  extension.md  manifest.md  migration.md  pipeline.md  provenance.md  serialization.md  target-code-adapters.md  tutorial.md
docs/server/: http.md  mcp.md
docs/stages/: advise.md  analyze.md  bundle.md  generate.md  kmesh.md  select.md
scripts/: check_mutation_score.py  validate_distribution.py  validate_qrf_artifacts.py
src/goldilocks_core/: __init__.py  advice.py  analysis.py  bundle.py  contracts.py  functionals.py  generation.py  jobs.py  kmesh.py  model_registry.toml  pipeline.py  selection.py
src/goldilocks_core/advisors/: __init__.py  kdistance_advisor.py  kindex_advisor.py  kmesh_advisor.py  kspacing_advisor.py
src/goldilocks_core/cli/: cli_kmesh.py  core.py
src/goldilocks_core/io/: structures.py
src/goldilocks_core/ml/: atom_features.py  cgcnn.py  cgcnn_graph.py  features.py  inference.py  kdistance_features.py  metallicity.py  model_registry.py  models.py  validation.py
src/goldilocks_core/pseudo/: parse_upf.py  pp_metadata.py  pp_policy.py  pp_registry.py
src/goldilocks_core/server/: __init__.py  http.py  mcp.py  request.py
src/goldilocks_core/shared/: types.py
tests/: conftest.py  test_advice.py  test_analysis.py  test_bundle.py  test_cli_core.py  test_cli_kmesh.py  test_contract_invariants.py  test_contracts.py  test_docs_http_status.py  test_from_dict.py  test_generation.py  test_jobs.py  test_k_mesh_advisor.py  test_kdistance_advisor.py  test_kdistance_features.py  test_kindex_advisor.py  test_kmesh.py  test_kspacing_advisor.py  test_ml_inference.py  test_ml_models.py  test_model_registry.py  test_parse_upf.py  test_pipeline.py  test_public_api.py  test_qrf_validation.py  test_runtime.py  test_selection.py  test_structures.py
tests/integration/: test_pipeline_workflows.py  test_public_api.py
tests/physics/: test_dft_decisions.py  test_reciprocal_sampling.py
tests/server/: conftest.py  test_http_cli.py  test_http_endpoints.py  test_http_runtime_reuse.py  test_mcp_cli.py  test_mcp_runtime_reuse.py  test_mcp_schemas.py  test_mcp_strict_args.py  test_mcp_tools.py  test_server_request.py
tests/unit/: test_advice.py  test_analysis.py  test_bundle.py  test_cgcnn.py  test_cli_core.py  test_contract_invariants.py  test_contracts.py  test_functionals.py  test_generation.py  test_jobs.py  test_kdistance_advisor.py  test_kdistance_features.py  test_kmesh.py  test_metallicity.py  test_ml_features.py  test_ml_inference.py  test_ml_models.py  test_model_registry.py  test_parse_upf.py  test_pp_policy.py  test_pp_registry.py  test_pp_selector.py  test_qrf_validation.py
