[project]
name = "goldilocks-core"
version = "0.1.0"
description = "Materials machine learning tools for recommending DFT calculation inputs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dscribe==2.1.2",
    "huggingface_hub>=0.23",
    "joblib==1.5.3",
    "matminer==0.10.1",
    "numpy==2.4.4",
    "pandas>=2.0",
    "pymatgen==2026.3.23",
    "scikit-learn==1.7.2",
    "sklearn-quantile==0.1.1",
    # The default k-points model (QRF + CGCNN metallicity) is a core capability,
    # so its ML stack ships in the base install (decision: stfc/goldilocks-core#32).
    # torch-geometric requires torch; on GPU hosts install the matching CUDA wheel
    # of torch first, then sync.
    "torch==2.12.1",
    "torch-geometric==2.8.0",
]

[project.scripts]
goldilocks-core = "goldilocks_core.cli.core:main"
goldilocks-kmesh = "goldilocks_core.cli.cli_kmesh:main"

[project.optional-dependencies]
# HTTP server transport. Optional so the core library stays light: `import
# goldilocks_core` does not require or import these. Install with
# `uv sync --extra http` or `pip install goldilocks-core[http]`.
http = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
# MCP server transport. Optional so the core library stays light: `import
# goldilocks_core` does not require or import these. Install with
# `uv sync --extra mcp` or `pip install goldilocks-core[mcp]`. Uses the
# maintained `mcp` Python SDK's public low-level `Server` + `stdio_server`
# primitives and `mcp.types` protocol types (no FastMCP internals). stdio only
# in v1.
mcp = [
    "mcp>=1.28",
]

[dependency-groups]
dev = [
    # HTTP transport test client (FastAPI TestClient requires httpx). Listed
    # here so CI installs them and the server tests run instead of skipping.
    "fastapi>=0.115",
    "httpx>=0.27",
    # MCP transport SDK (low-level `mcp.server.Server` + `mcp.server.stdio`
    # primitives) and its in-memory test client. Listed here so CI installs them
    # and the server tests run instead of skipping.
    "mcp>=1.28",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "uvicorn>=0.30",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.setuptools.package-data]
goldilocks_core = ["model_registry.toml"]

